--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.7",
     "mongoose": "^6.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
