--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
-MONGO=mongodb+srv://zeam2003:LyAPqsqgF98XbmL7@coderhousedb.8pcmeas.mongodb.net/coder
+MONGO2=mongodb+srv://zeam2003:LyAPqsqgF98XbmL7@coderhousedb.8pcmeas.mongodb.net/coder
+MONGO=mongodb://mongo:QnGfiTNA7klnSraqf4RL@containers-us-west-120.railway.app:6290
